@@ -131,7 +131,7 @@ eggs +=
                 "-c",
                 "buildout-5.2.x.cfg",
                 "buildout:eggs-directory=%s" % self.eggs_directory,
-                "instance:zcml=collective.ckeditor:migration-registry.zcml",
+                "instance:zcml=collective.ckeditor:custom-properties.zcml",
                 "plonesite:upgrade-profiles=collective.ckeditor:default",
                 "install",
                 "instance",
@@ -156,6 +156,7 @@ eggs +=
                 "buildout:eggs-directory=%s" % self.eggs_directory,
                 "plonesite:upgrade-profiles=collective.ckeditor:default",
                 "plonesite:profiles=collective.quickupload:default",
+                "instance:zcml=collective.ckeditor:migration-registry.zcml",
                 "install",
                 "instance",
                 "plonesite",
