@@ -169,20 +169,20 @@
     </upgradeSteps>
 
     <upgradeSteps
-        source="*"
+        source="4350"
         destination="4360"
         profile="collective.ckeditor:default"
         zcml:condition="not-have migration-registry"
         >
 
         <upgradeDepends
-            title="Registry"
+            title="Upgrade to registry"
             description=""
             import_steps="plone.app.registry"
         />
 
         <upgradeStep
-             title="Migrate to plone.app.registry"
+             title="Migrate porperties to plone.app.registry"
              description="Copy portal_properties to registry"
              handler=".upgrades.to_registry"
         />
